--- a/comp1.Rmd
+++ b/comp1.Rmd
@@ -419,6 +419,7 @@ Here you see how to write formulas with latex (needed below)
 $$
 \hat{\boldsymbol \beta}=({\bf X}^T{\bf X})^{-1}{\bf X}^T{\bf Y}
 $$
+Test
 
 **Q16:** 
 
