--- a/comp1.Rmd
+++ b/comp1.Rmd
@@ -462,10 +462,10 @@ $$
     E[\hat{f}(\boldsymbol{x_0})] &= E[\boldsymbol{x_0^T \boldsymbol{\hat{\beta}}}]\\
     &\\
     &= x_0^T E[\boldsymbol{\boldsymbol{\hat{\beta}}}] \\
+    &\\
     &= \boldsymbol{x_0^T}  \boldsymbol{\beta}
   \end{split}
 $$
->>>>>>> fb189dd0e3194fa3c9e7cfb4641544371b0e2666
 
 **Q18:** 
 $$
@@ -473,12 +473,36 @@ $$
 $$
 
 
-Ridge estimator:
+The Ridge estimator is given as
 $$
 \widetilde{\boldsymbol \beta}=({\bf X}^T{\bf X}+\lambda {\bf I})^{-1}{\bf X}^T{\bf Y}
 $$
 
+
 **Q19:** 
+Expected value of the ridge estimator
+$$
+\begin{split}
+E[\widetilde{\boldsymbol{\beta}}] &= E[({ X}^T{ X}+\lambda { I})^{-1}{ X}^T{\bf Y}] \\
+&\\
+&= ({ X}^T{ X}+\lambda { I})^{-1}{ X}^TE[{\bf Y}] \\
+&\\
+&=({X}^T{X}+\lambda {I})^{-1}{X}^TX\boldsymbol{\beta}
+\end{split}
+$$
+Covariance of the ridge estimator
+$$
+\begin{split}
+\text{Cov}[\widetilde{\boldsymbol{\beta}}] &= \text{Cov}[({ X}^T{ X}+\lambda { I})^{-1}{ X}^T{\bf Y}]\\
+&\\
+&= ({ X}^T{ X}+\lambda { I})^{-1}{ X}^T\text{Cov}[{\bf Y}]\bigg(({ X}^T{ X}+\lambda { I})^{-1}{ X}^T\bigg)^{T} \\
+&\\
+&= ({ X}^T{ X}+\lambda { I})^{-1}{ X}^T\sigma^2IX\bigg(({ X}^T{ X}+\lambda { I})^{T}\bigg)^{-1}
+&\\
+&= \sigma^2(X^TX + \lambda I)^{-1}X^TX(X^TX+\lambda I)^{-1}\\
+&\\
+\end{split}
+$$
 
 **Q20:** 
 
